--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@emotion/react": "^11.6.0",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.1.1",
+    "@mui/material": "^5.1.1",
     "gatsby": "^4.1.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
